# edmd

./: .clang-format  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  EventListType.cpp  Simulation.cpp
py/: Sphere.py
src/: Box.h  Checks.h  Constants.h  Event.h  EventInfo.h  Id.h  Plane.h  Simulation.h  Sphere.h  SphereVsPlane.h  SphereVsSphere.h  Utils.h
test/: BoostUnitTest.h  CMakeLists.txt  Checks.cpp  EventInvalidation.cpp  Id.cpp  NewtonsCradle.cpp  Sphere.cpp  SphereInBox.cpp  SphereVsPlane.cpp  SphereVsSphere.cpp  SpheresInBox.cpp
